Accessbility API to resolve all roles and permissions
